# lagunaxs2-rlvr

./: .env.example  .gitignore  README.md  mise.toml  pyproject.toml
conf/: config.yaml
conf/env/: agentic_repair.yaml  code_smoke.yaml  frontend_design.yaml  general_agent.yaml  multilingual.yaml  ocr_tool.yaml  ocr_tool_real.yaml  tb_curated.yaml
conf/model/: gemini.yaml  laguna_m1.yaml  laguna_vllm.yaml  laguna_xs2.yaml  ollama.yaml  openai.yaml  proxy.yaml
conf/reward/: binary.yaml  partial.yaml
conf/rl/: laguna_small.yaml
configs/mm_adapter/: a100-40gb-projector.toml  a100-80gb-laguna-bf16-mb2.toml  a100-80gb-laguna-bf16-microbatch2.toml  a100-80gb-laguna-bf16.toml  a100-audio-projector.toml
configs/rl/: frontend-design.toml  laguna-curriculum.toml  laguna-read-gspo.toml  laguna-xs2.toml  ocr-tool-mixed.toml
configs/schedules/: mixture_sweep.yaml  ocrvqa_recovery.yaml
data/: multiturn_qa.jsonl
docs/: a100-multimodal-adapter.md  adaption-multilingual-coding.md  terminal-bench-verifiers-compat.md
docs/adaption/: seed_multilingual_coding.jsonl
docs/experiments/agentic-ocr-tool/: bakeoff.md  baseline.md  ocr_backend_wer.md  ocrvqa_recovery.md  real_ocr_loop.md
docs/experiments/bridge-data-recipe/: results.md
docs/experiments/glm-ocr-encoder/: results.md
docs/plans/: 2026-06-03-bridge-fix-data-recipe.md
docs/specs/: 2026-05-29-laguna-finetune-structure-design.md  2026-05-30-audio-adapter-design.md  2026-05-30-hf-space-vision-demo.md  2026-05-30-stage-0-baseline-design.md  2026-05-31-grpo-rlvr-design.md  2026-06-02-multi-scaffold-tooluse.md  2026-06-03-bridge-fix-data-recipe-design.md  2026-06-06-decoder-unfreeze-ocr-wall-design.md  2026-06-07-resampler-bottleneck-ocr-wall-design.md  2026-06-08-agentic-ocr-tool-design.md  2026-06-11-render-verifiable-encoder-env-design.md  2026-06-11-tool-trace-sft-warmstart-design.md  2026-06-19-encoder-free-vlm-design.md  external-benchmarks.md  sft-scale-up-vs-reference.md
environments/agentic_repair/: README.md  agentic_repair.py  pyproject.toml
environments/code_smoke/: README.md  code_smoke.py  pyproject.toml
environments/frontend_design/: frontend_design.py  pyproject.toml
environments/general_agent/: README.md  general_agent.py  pyproject.toml
environments/ocr_tool/: ocr_tool.py  pyproject.toml
environments/swe_multilingual/: README.md  pyproject.toml  swe_multilingual.py
environments/terminal_bench_curated/: README.md  pyproject.toml  terminal_bench_curated.py
scripts/: encoder_free_poc.py  mixture_sweep.py  mm_adapter_plan.py  ocrvqa_recovery_sweep.py  portfolio_probe.sh  rlvr_loop.sh  submit_training.sh  sweep_glm_ocr.py  sweep_glm_ocr_alltasks.py  sweep_glm_ocr_alltasks_unfreeze.py  verify_seed.py  wandb_detail.py  wandb_pull.py
spaces/laguna-vision/: README.md  app.py  requirements.txt
spaces/laguna-vision/laguna_rlvr/: __init__.py
spaces/laguna-vision/laguna_rlvr/visual/: model.py  projector.py
src/laguna_finetune/: __init__.py  code_exec.py  probe.py  report.py  rewards.py  rl.py
src/laguna_rlvr/: adapter_plan.py  code_exec.py  mm_adapter.py  probe.py  report.py  rewards.py  rl.py  scaffold.py  seed.py
src/laguna_rlvr/audio/: __init__.py  data.py  encoders.py
src/laguna_rlvr/mm/: __init__.py  eval.py  metrics.py  model.py  seed.py  train.py
src/laguna_rlvr/synth/: __init__.py  __main__.py  generate.py  task.py
src/laguna_rlvr/visual/: __init__.py  baseline.py  benchmarks.py  code_metrics.py  corpora.py  data.py  design2code.py  docqa.py  edit_eval.py  encoders.py  eval.py  gencheck.py  grounding.py  grpo.py  gspo.py  hf_image_text.py  metrics.py  mmdu.py  mmmu.py  model.py  multiturn_qa.py  ocr_backend_eval.py  ocrbench.py  preload.py  projector.py  screenspot.py  serve.py  swebench_mm.py  tool_eval.py  train.py  vision_tool_eval.py  vision_tool_gspo.py  vision_tool_sft.py
tests/: conftest.py  scaffold_emit.py  test_adapter_plan.py  test_agentic_qa.py  test_agentic_repair.py  test_audio_data.py  test_audio_model.py  test_baseline.py  test_benchmarks.py  test_code_exec.py  test_code_metrics.py  test_code_smoke.py  test_corpora.py  test_design2code.py  test_encoder_free.py  test_frontend_design.py  test_general_agent.py  test_gspo.py  test_mm_adapter.py  test_mm_metrics.py  test_mm_model.py  test_mm_projector.py  test_mmdu.py  test_mmmu.py  test_model.py  test_multiturn_qa.py  test_ocr_backend_eval.py  test_ocr_tool.py  test_ocrbench.py  test_probe.py  test_report.py  test_rewards.py  test_rl_guard.py  test_scaffold.py  test_screenspot.py  test_synth_generate.py  test_synth_task.py  test_tool_eval.py  test_vision_tool_eval.py  test_vision_tool_gspo.py  (+6 more)
