[project]
name = "laguna-rlvr"
version = "0.1.0"
description = "Laguna XS.2 finetune — Hydra-orchestrated probe + RL on Prime Intellect"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.17",
    "verifiers>=0.1.14",
    "datasets>=2.19",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "compressed-tensors>=0.16.0",
    "jiwer>=4.0.0",
    "torchvision>=0.27.0",
    "accelerate>=1.13.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "pillow>=12.2.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]   # don't collect the locally-cloned lab-cookbook/ or env packages

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laguna_rlvr"]
