[project]
name = "agentic-repair"
description = "Composite-reward agentic code repair (bug-fix MBPP): correctness + efficiency + minimal-diff + self-verify."
tags = ["code", "repair", "multi-turn", "rl", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.14",
    "datasets>=2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["agentic_repair.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 1
