[project]
name = "code-smoke"
description = "Multi-turn, no-Docker code-repair smoke env (write -> test -> fix -> repeat)."
tags = ["code", "multi-turn", "eval", "train"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.14",
    "datasets>=2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# laguna_rlvr/ is vendored in only at push time by scripts/submit_training.sh (gitignored),
# so the hosted-training container is self-contained with no extra install.
include = ["code_smoke.py", "pyproject.toml", "laguna_rlvr/**/*.py"]

[tool.verifiers.eval]
num_examples = 3
rollouts_per_example = 1
