[project]
name = "ocr-tool"
description = "Multi-turn OCR-as-tool eval: read a document image via an ocr() tool, then answer."
tags = ["ocr", "tool-use", "multi-turn", "eval", "multimodal"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.14",
    "datasets>=2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# laguna_rlvr/ is vendored in only at push time (gitignored), so the hosted container is self-contained.
include = ["ocr_tool.py", "pyproject.toml", "laguna_rlvr/**/*.py"]

[tool.verifiers.eval]
num_examples = 4
rollouts_per_example = 1
