[project]
name = "swe-multilingual"
description = "Per-language SWE env targeting Laguna's multilingual headroom (deferred stub)."
tags = ["swe", "multilingual", "eval", "train"]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["swe_multilingual.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
