[project]
name = "terminal-bench-curated"
description = "Curated Terminal-Bench (local Docker) with a dense partial-credit reward."
tags = ["terminal-bench", "eval", "train", "sandbox", "multi-turn"]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.14",
    "terminal-bench>=0.2.17",
    "datasets>=2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["terminal_bench_curated.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
